2013-06-16  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_tokenise):  Get rid of erroneous test against
	axis_array[foo].timefmt (always evaluates as TRUE).

2013-06-07  Thomas Mattison  <mattison <at> phas.ubc.ca>

	* src/fit.c (regress):  Fit did not converge if maximum lambda was
	exceeded.  Add new message for this case.
	Patchset #230.

2013-06-07  Bastian Maerkisch  <bmaerkisch@web.de>

	More backports from version 4.7

	* src/fit.c (fit_command):  Always initialize variables which might be
	set by user variables.  This is necessary since user variables may be
	`undefine`d.

	* src/fit.c (backup_file):  Remove code path for Win32s.  Backup files 
	will not get overwritten.  Add error message for that case.

	* src/fit.c (fit_command):  Log file contained the wrong variable name
	for axis restrictions.  Reported by Victor Slabinski on gnuplot-bugs.

	* src/fit.c|h src/win/wgraph.c src/win/wtext.c:  Ctrl-Break interrupts
	fitting runs in wgnuplot.

	* src/win/winmain.c|h (WinRaiseConsole) src/fit.c src/win/wgraph.c
	src/wxterminal/wxt_gui.cpp: Consolidate code to raise console in new
	routine.

	* src/win/wprinter.c (PrintDlgProc):  Verify that printer info is actually
	available.
	Bug 1152.

	* src/win/wgraph.c (SaveAsEMF, CopyClip):  Turn off antialiasing during
	export to EMF or clipboard in order not to mix GDI and GDI+ calls.  See
	also change on 2012-07-25.

	* src/win/wgraph.c:  Recreate fonts after resizing the graph window.
	This bug causes the plot just to be scaled to the new size, without
	adjusting spacing/borders etc.
	Bugfix.

	* config/makefile.nt:  Superseded by msvc/Makefile. Removed.

2013-06-07  Bastian Maerkisch  <bmaerkisch@web.de>

	More backports from version 4.7

	* term/win.trm (WIN_options):  Validate argument to title option.

	* term/win.trm (WIN_filled_polygon): Filled polygon are always closed.
	Ignore the last corner if it's the same as the first one.
